<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.n3153r.clase1.Main4Activity"
    android:orientation="vertical"
    android:weightSum="1">


    <AbsoluteLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7b5e5e">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x_10_y_40"
            android:id="@+id/button20"
            android:layout_x="10dp"
            android:layout_y="40dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x_120_y_10"
            android:id="@+id/button21"
            android:layout_x="120dp"
            android:layout_y="10dp"
            />
    </AbsoluteLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7dbacf">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cuadrado"
            android:src="@drawable/cuadrado"
            android:onClick="cuadrado"
            android:scaleType="fitCenter"
            android:contentDescription="@string/cuadrado"
            android:layout_gravity="center_horizontal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/circulo"
            android:src="@drawable/circulo"
            android:onClick="circulo"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:contentDescription="@string/circulo"/>

    </FrameLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#b8acac">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            android:id="@+id/textView2" />

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:inputType="textPersonName"
            android:minWidth="200dp"
            />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/code" />

        <EditText

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:inputType="textPassword"/>
    </GridLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9170d6">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e1d176">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usuario"
                android:id="@+id/textView3" />

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:inputType="textPersonName"
                android:minWidth="200dp"
                android:id="@+id/editText" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f5b97d">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code"
                android:id="@+id/textView6" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/editText4" />
        </TableRow>
    </TableLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:background="#7467ed">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="200dp"
                android:layout_height="220dp"
                android:text="@string/primero"
                android:id="@+id/button22"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="200dp"
                android:layout_height="220dp"
                android:text="@string/segundo"
                android:id="@+id/button23"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>







</LinearLayout>
    </ScrollView>